tests/chapter_11/invalid_types/conflicting_global_types.c
int foo = 3;

/* It's illegal to declare the same variable
 * with different types
 */
LONG64 foo;

int main(void) {
    return foo;
}